[fix] kpi trashed route.
